fix(plyr-controls): fix plyr-controls not align to center

--- a/src/style/plyr-controls.css
+++ b/src/style/plyr-controls.css
@@ -27,3 +27,7 @@
 .plyr-controls-settings .plyr__time--duration {
   display: inline-block !important;
 }
+
+.plyr-ctrls-container {
+  width: 100%;
+}
